[gd_scene load_steps=10 format=4 uid="uid://cabe8qtwdttod"]

[ext_resource type="Script" uid="uid://dr8e4fht0m3tm" path="res://scenes_and_scripts/levels/world1/level4.gd" id="1_gxsq4"]
[ext_resource type="TileSet" uid="uid://dm4mj0uoi2xjo" path="res://tilesets/interactive.tres" id="3_seiur"]
[ext_resource type="PackedScene" uid="uid://bwhij74px8aqb" path="res://scenes_and_scripts/characters/bill.tscn" id="4_0kkl0"]
[ext_resource type="AudioStream" uid="uid://bew3oqeixxokw" path="res://music/castle.ogg" id="4_gxsq4"]
[ext_resource type="PackedScene" uid="uid://3kxmr6xlkxlo" path="res://scenes_and_scripts/objects/end_sign.tscn" id="6_isn4r"]
[ext_resource type="PackedScene" uid="uid://cspgfyx7krr4p" path="res://scenes_and_scripts/circle_ui.tscn" id="7_40e2s"]
[ext_resource type="PackedScene" uid="uid://cbi6r8vgamni6" path="res://scenes_and_scripts/characters/bigbubble.tscn" id="7_gxsq4"]
[ext_resource type="PackedScene" uid="uid://lnlhgbapvy22" path="res://scenes_and_scripts/instant_death.tscn" id="8_jdk3m"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gxsq4"]
size = Vector2(16, 16)

[node name="Level" type="Node2D"]
script = ExtResource("1_gxsq4")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ColorRect" type="ColorRect" parent="ParallaxBackground"]
offset_right = 328.0
offset_bottom = 224.0
color = Color(0, 0, 0, 1)

[node name="TileMapLayerBackground" type="TileMapLayer" parent="."]
tile_set = ExtResource("3_seiur")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAAsAAwAAAAAAAAABAAsAAwAAAAAAAAACAAsAAwAAAAAAAAADAAsAAwAAAAAAAAAEAAsAAwAAAAAAAAAFAAsAAwAAAAAAAAAGAAsAAwAAAAAAAAAAAAoAAwAAAAAAAAAAAAwAAwAAAAAAAAABAAoAAwAAAAAAAAABAAwAAwAAAAAAAAACAAoAAwAAAAAAAAACAAwAAwAAAAAAAAADAAoAAwAAAAAAAAADAAwAAwAAAAAAAAAEAAoAAwAAAAAAAAAEAAwAAwAAAAAAAAAFAAoAAwAAAAAAAAAFAAwAAwAAAAAAAAAGAAoAAwAAAAAAAAAGAAwAAwAAAAAAAAAHAAoAAwAAAAAAAAAHAAsAAwAAAAAAAAAHAAwAAwAAAAAAAAAIAAoAAwAAAAAAAAAIAAsAAwAAAAAAAAAIAAwAAwAAAAAAAAAJAAoAAwAAAAAAAAAJAAsAAwAAAAAAAAAJAAwAAwAAAAAAAAAKAAoAAwAAAAAAAAAKAAsAAwAAAAAAAAAKAAwAAwAAAAAAAAALAAoAAwAAAAAAAAALAAsAAwAAAAAAAAALAAwAAwAAAAAAAAAMAAoAAwAAAAAAAAAMAAsAAwAAAAAAAAAMAAwAAwAAAAAAAAANAAoAAwAAAAAAAAANAAsAAwAAAAAAAAANAAwAAwAAAAAAAAAOAAoAAwAAAAAAAAAOAAsAAwAAAAAAAAAOAAwAAwAAAAAAAAAPAAoAAwAAAAAAAAAPAAsAAwAAAAAAAAAPAAwAAwAAAAAAAAAQAAoAAwAAAAAAAAAQAAsAAwAAAAAAAAAQAAwAAwAAAAAAAAARAAsAAgAAAAAACAASAAsAAgAAAAAACAATAAsAAgAAAAAACAARAAwABgAAAAAAAAASAAwABgAAAAAAAAATAAwABgAAAAAAAAAUAAwABgAAAAAAAAAUAAsAAgAAAAAACAAVAAsAAgAAAAAACAAVAAwABgAAAAAAAAAWAAwAAwAAAAAAAAAWAAsAAwAAAAAAAAAWAAoAAwAAAAAAAAAXAAoAAwAAAAAAAAAYAAoAAwAAAAAAAAAZAAoAAwAAAAAAAAAaAAoAAwAAAAAAAAAbAAoAAwAAAAAAAAAcAAoAAwAAAAAAAAAcAAsAAwAAAAAAAAAcAAwAAwAAAAAAAAAbAAwAAwAAAAAAAAAaAAwAAwAAAAAAAAAZAAwAAwAAAAAAAAAYAAwAAwAAAAAAAAAXAAwAAwAAAAAAAAAXAAsAAwAAAAAAAAAYAAsAAwAAAAAAAAAZAAsAAwAAAAAAAAAaAAsAAwAAAAAAAAAbAAsAAwAAAAAAAAAAAAAAAwAAAAAAAAABAAAAAwAAAAAAAAACAAAAAwAAAAAAAAADAAAAAwAAAAAAAAAEAAAAAwAAAAAAAAAFAAAAAwAAAAAAAAAGAAAAAwAAAAAAAAAHAAAAAwAAAAAAAAAIAAAAAwAAAAAAAAAJAAAAAwAAAAAAAAAKAAAAAwAAAAAAAAALAAAAAwAAAAAAAAAMAAAAAwAAAAAAAAANAAAAAwAAAAAAAAAOAAAAAwAAAAAAAAAPAAAAAwAAAAAAAAAQAAAAAwAAAAAAAAARAAAAAwAAAAAAAAASAAAAAwAAAAAAAAATAAAAAwAAAAAAAAAUAAAAAwAAAAAAAAAVAAAAAwAAAAAAAAAWAAAAAwAAAAAAAAAXAAAAAwAAAAAAAAAYAAAAAwAAAAAAAAAZAAAAAwAAAAAAAAAaAAAAAwAAAAAAAAAbAAAAAwAAAAAAAAAcAAAAAwAAAAAAAAAdAAAAAwAAAAAAAAAeAAAAAwAAAAAAAAAfAAAAAwAAAAAAAAAgAAAAAwAAAAAAAAAhAAAAAwAAAAAAAAAZAAkAAwAAAAAAAAAaAAkAAwAAAAAAAAAbAAkAAwAAAAAAAAAcAAkAAwAAAAAAAAAoAAsAAwAAAAAAAAAoAAwAAwAAAAAAAAAnAAwAAwAAAAAAAAAmAAwAAwAAAAAAAAAlAAwAAwAAAAAAAAAkAAwAAwAAAAAAAAAjAAwAAwAAAAAAAAAiAAwAAwAAAAAAAAAhAAwAAwAAAAAAAAAgAAwAAwAAAAAAAAAfAAwAAwAAAAAAAAAeAAwAAwAAAAAAAAAdAAwAAwAAAAAAAAAdAAsAAwAAAAAAAAAeAAsAAwAAAAAAAAAfAAsAAwAAAAAAAAAgAAsAAwAAAAAAAAAhAAsAAwAAAAAAAAAiAAsAAwAAAAAAAAAjAAsAAwAAAAAAAAAkAAsAAwAAAAAAAAAlAAsAAwAAAAAAAAAmAAsAAwAAAAAAAAAnAAsAAwAAAAAAAAApAAsAAwAAAAAAAAAqAAsAAwAAAAAAAAArAAsAAwAAAAAAAAAsAAsAAwAAAAAAAAAtAAsAAwAAAAAAAAAtAAwAAwAAAAAAAAAsAAwAAwAAAAAAAAArAAwAAwAAAAAAAAAqAAwAAwAAAAAAAAApAAwAAwAAAAAAAAAiAAAAAwAAAAAAAAAjAAAAAwAAAAAAAAAkAAAAAwAAAAAAAAAlAAAAAwAAAAAAAAAmAAAAAwAAAAAAAAAnAAAAAwAAAAAAAAAoAAAAAwAAAAAAAAApAAAAAwAAAAAAAAAqAAAAAwAAAAAAAAArAAAAAwAAAAAAAAAsAAAAAwAAAAAAAAAtAAAAAwAAAAAAAAAuAAkAAwAAAAAAAAAuAAoAAwAAAAAAAAAuAAsAAwAAAAAAAAAuAAwAAwAAAAAAAAAvAAkAAwAAAAAAAAAvAAoAAwAAAAAAAAAvAAsAAwAAAAAAAAAvAAwAAwAAAAAAAAAgAAUAAwAAAAAAAAAfAAUAAwAAAAAAAAAeAAUAAwAAAAAAAAAdAAUAAwAAAAAAAAAkAAUAAwAAAAAAAAAlAAUAAwAAAAAAAAAmAAUAAwAAAAAAAAAqAAUAAwAAAAAAAAArAAUAAwAAAAAAAAAsAAUAAwAAAAAAAAAtAAUAAwAAAAAAAAAwAAkAAwAAAAAAAAAwAAoAAwAAAAAAAAAwAAsAAwAAAAAAAAAwAAwAAwAAAAAAAAAxAAkAAwAAAAAAAAAxAAoAAwAAAAAAAAAxAAsAAwAAAAAAAAAxAAwAAwAAAAAAAAAyAAkAAwAAAAAAAAAyAAoAAwAAAAAAAAAyAAsAAwAAAAAAAAAyAAwAAwAAAAAAAAAzAAkAAwAAAAAAAAAzAAoAAwAAAAAAAAAzAAsAAwAAAAAAAAAzAAwAAwAAAAAAAAA0AAkAAwAAAAAAAAA0AAoAAwAAAAAAAAA0AAsAAwAAAAAAAAA0AAwAAwAAAAAAAAA1AAkAAwAAAAAAAAA1AAoAAwAAAAAAAAA1AAsAAwAAAAAAAAA1AAwAAwAAAAAAAAAvAAgAAgAAAAAABwAPAAkAAgAAAAAABwA2AAkAAwAAAAAAAAA2AAoAAwAAAAAAAAA2AAsAAwAAAAAAAAA2AAwAAwAAAAAAAAA3AAkAAwAAAAAAAAA3AAoAAwAAAAAAAAA3AAsAAwAAAAAAAAA3AAwAAwAAAAAAAAA4AAkAAwAAAAAAAAA4AAoAAwAAAAAAAAA4AAsAAwAAAAAAAAA4AAwAAwAAAAAAAAA5AAkAAwAAAAAAAAA5AAoAAwAAAAAAAAA5AAsAAwAAAAAAAAA5AAwAAwAAAAAAAAA6AAkAAwAAAAAAAAA6AAoAAwAAAAAAAAA6AAsAAwAAAAAAAAA6AAwAAwAAAAAAAAA7AAkAAwAAAAAAAAA7AAoAAwAAAAAAAAA7AAsAAwAAAAAAAAA7AAwAAwAAAAAAAAAnAAoAAgAAAAAABQA8AAkAAgAAAAAAAwA9AAkAAgAAAAAAAwA+AAkAAgAAAAAAAwA/AAkAAgAAAAAAAwBAAAkAAgAAAAAAAwBBAAgAAgAAAAAAAwBCAAcAAgAAAAAAAwBDAAYAAgAAAAAAAwBEAAYAAgAAAAAAAwBFAAYAAgAAAAAAAwBGAAYAAgAAAAAAAwBHAAYAAgAAAAAAAwBIAAYAAgAAAAAAAwBJAAYAAgAAAAAAAwBKAAYAAgAAAAAAAwBLAAYAAgAAAAAAAwBMAAYAAgAAAAAAAwBNAAYAAgAAAAAAAwBOAAYAAwAAAAAAAABOAAcAAwAAAAAAAABOAAgAAwAAAAAAAABOAAkAAwAAAAAAAABOAAoAAwAAAAAAAABOAAsAAwAAAAAAAABOAAwAAwAAAAAAAABPAAYAAwAAAAAAAABPAAcAAwAAAAAAAABPAAgAAwAAAAAAAABPAAkAAwAAAAAAAABPAAoAAwAAAAAAAABPAAsAAwAAAAAAAABPAAwAAwAAAAAAAABQAAYAAwAAAAAAAABQAAcAAwAAAAAAAABQAAgAAwAAAAAAAABQAAkAAwAAAAAAAABQAAoAAwAAAAAAAABQAAsAAwAAAAAAAABQAAwAAwAAAAAAAABRAAYAAwAAAAAAAABRAAcAAwAAAAAAAABRAAgAAwAAAAAAAABRAAkAAwAAAAAAAABRAAoAAwAAAAAAAABRAAsAAwAAAAAAAABRAAwAAwAAAAAAAABSAAYAAwAAAAAAAABSAAcAAwAAAAAAAABSAAgAAwAAAAAAAABSAAkAAwAAAAAAAABSAAoAAwAAAAAAAABSAAsAAwAAAAAAAABSAAwAAwAAAAAAAABTAAYAAwAAAAAAAABTAAcAAwAAAAAAAABTAAgAAwAAAAAAAABTAAkAAwAAAAAAAABTAAoAAwAAAAAAAABTAAsAAwAAAAAAAABTAAwAAwAAAAAAAABUAAYAAwAAAAAAAABUAAcAAwAAAAAAAABUAAgAAwAAAAAAAABUAAkAAwAAAAAAAABUAAoAAwAAAAAAAABUAAsAAwAAAAAAAABUAAwAAwAAAAAAAABVAAYAAwAAAAAAAABVAAcAAwAAAAAAAABVAAgAAwAAAAAAAABVAAkAAwAAAAAAAABVAAoAAwAAAAAAAABVAAsAAwAAAAAAAABVAAwAAwAAAAAAAABWAAYAAwAAAAAAAABWAAcAAwAAAAAAAABWAAgAAwAAAAAAAABWAAkAAwAAAAAAAABWAAoAAwAAAAAAAABWAAsAAwAAAAAAAABWAAwAAwAAAAAAAABXAAYAAwAAAAAAAABXAAcAAwAAAAAAAABXAAgAAwAAAAAAAABXAAkAAwAAAAAAAABXAAoAAwAAAAAAAABXAAsAAwAAAAAAAABXAAwAAwAAAAAAAABYAAYAAwAAAAAAAABYAAcAAwAAAAAAAABYAAgAAwAAAAAAAABYAAkAAwAAAAAAAABYAAoAAwAAAAAAAABYAAsAAwAAAAAAAABYAAwAAwAAAAAAAABZAAYAAwAAAAAAAABZAAcAAwAAAAAAAABZAAgAAwAAAAAAAABZAAkAAwAAAAAAAABZAAoAAwAAAAAAAABZAAsAAwAAAAAAAABZAAwAAwAAAAAAAAAuAAAAAwAAAAAAAAAvAAAAAwAAAAAAAAAwAAAAAwAAAAAAAAAxAAAAAwAAAAAAAAAyAAAAAwAAAAAAAAAzAAAAAwAAAAAAAAA0AAAAAwAAAAAAAAA1AAAAAwAAAAAAAAA2AAAAAwAAAAAAAAA3AAAAAwAAAAAAAAA4AAAAAwAAAAAAAAA5AAAAAwAAAAAAAAA6AAAAAwAAAAAAAAA7AAAAAwAAAAAAAAA8AAAAAwAAAAAAAAA9AAAAAwAAAAAAAAA+AAAAAwAAAAAAAAA/AAAAAwAAAAAAAABAAAAAAwAAAAAAAABBAAAAAwAAAAAAAABCAAAAAwAAAAAAAABDAAAAAwAAAAAAAABEAAAAAwAAAAAAAABFAAAAAwAAAAAAAABGAAAAAwAAAAAAAABHAAAAAwAAAAAAAABIAAAAAwAAAAAAAABJAAAAAwAAAAAAAABKAAAAAwAAAAAAAABLAAAAAwAAAAAAAABMAAAAAwAAAAAAAABNAAAAAwAAAAAAAABOAAAAAwAAAAAAAABPAAAAAwAAAAAAAABQAAAAAwAAAAAAAABRAAAAAwAAAAAAAABSAAAAAwAAAAAAAABTAAAAAwAAAAAAAABUAAAAAwAAAAAAAABVAAAAAwAAAAAAAABWAAAAAwAAAAAAAABXAAAAAwAAAAAAAABYAAAAAwAAAAAAAABZAAAAAwAAAAAAAABaAAAAAwAAAAAAAABbAAAAAwAAAAAAAABcAAAAAwAAAAAAAABdAAAAAwAAAAAAAABeAAAAAwAAAAAAAABfAAAAAwAAAAAAAABgAAAAAwAAAAAAAABhAAAAAwAAAAAAAABiAAAAAwAAAAAAAABjAAAAAwAAAAAAAABkAAAAAwAAAAAAAABlAAAAAwAAAAAAAABmAAAAAwAAAAAAAABnAAAAAwAAAAAAAABoAAAAAwAAAAAAAABpAAAAAwAAAAAAAABqAAAAAwAAAAAAAABrAAAAAwAAAAAAAABsAAAAAwAAAAAAAABtAAAAAwAAAAAAAABuAAAAAwAAAAAAAABvAAAAAwAAAAAAAABwAAAAAwAAAAAAAABxAAAAAwAAAAAAAAByAAAAAwAAAAAAAABzAAAAAwAAAAAAAAB0AAAAAwAAAAAAAAB1AAAAAwAAAAAAAAB2AAAAAwAAAAAAAAB3AAAAAwAAAAAAAAB4AAAAAwAAAAAAAAB5AAAAAwAAAAAAAAB6AAAAAwAAAAAAAAB7AAAAAwAAAAAAAAB8AAAAAwAAAAAAAAB9AAAAAwAAAAAAAAB+AAAAAwAAAAAAAAB/AAAAAwAAAAAAAACAAAAAAwAAAAAAAACBAAAAAwAAAAAAAACCAAAAAwAAAAAAAACDAAAAAwAAAAAAAACEAAAAAwAAAAAAAACFAAAAAwAAAAAAAACGAAAAAwAAAAAAAACHAAAAAwAAAAAAAACIAAAAAwAAAAAAAACJAAAAAwAAAAAAAACKAAAAAwAAAAAAAACLAAAAAwAAAAAAAACMAAAAAwAAAAAAAACNAAAAAwAAAAAAAACOAAAAAwAAAAAAAACPAAAAAwAAAAAAAACQAAAAAwAAAAAAAACRAAAAAwAAAAAAAACSAAAAAwAAAAAAAACTAAAAAwAAAAAAAACUAAAAAwAAAAAAAACVAAAAAwAAAAAAAACWAAAAAwAAAAAAAACXAAAAAwAAAAAAAACYAAAAAwAAAAAAAACZAAAAAwAAAAAAAACaAAAAAwAAAAAAAACbAAAAAwAAAAAAAACcAAAAAwAAAAAAAACdAAAAAwAAAAAAAACeAAAAAwAAAAAAAACfAAAAAwAAAAAAAACgAAAAAwAAAAAAAAChAAAAAwAAAAAAAACiAAAAAwAAAAAAAACjAAAAAwAAAAAAAACkAAAAAwAAAAAAAAClAAAAAwAAAAAAAACmAAAAAwAAAAAAAACnAAAAAwAAAAAAAACoAAAAAwAAAAAAAACpAAAAAwAAAAAAAACqAAAAAwAAAAAAAACrAAAAAwAAAAAAAACsAAAAAwAAAAAAAACtAAAAAwAAAAAAAACuAAAAAwAAAAAAAACvAAAAAwAAAAAAAACwAAAAAwAAAAAAAACxAAAAAwAAAAAAAACyAAAAAwAAAAAAAACzAAAAAwAAAAAAAAC0AAAAAwAAAAAAAAC1AAAAAwAAAAAAAAC2AAAAAwAAAAAAAAC3AAAAAwAAAAAAAAC4AAAAAwAAAAAAAAC5AAAAAwAAAAAAAAC6AAAAAwAAAAAAAAC7AAAAAwAAAAAAAAC8AAAAAwAAAAAAAAC9AAAAAwAAAAAAAAC+AAAAAwAAAAAAAAC/AAAAAwAAAAAAAADAAAAAAwAAAAAAAADBAAAAAwAAAAAAAADCAAAAAwAAAAAAAADDAAAAAwAAAAAAAADEAAAAAwAAAAAAAADFAAAAAwAAAAAAAADGAAAAAwAAAAAAAADHAAAAAwAAAAAAAADIAAAAAwAAAAAAAADJAAAAAwAAAAAAAADKAAAAAwAAAAAAAADLAAAAAwAAAAAAAADMAAAAAwAAAAAAAADNAAAAAwAAAAAAAADOAAAAAwAAAAAAAADPAAAAAwAAAAAAAADQAAAAAwAAAAAAAADRAAAAAwAAAAAAAADSAAAAAwAAAAAAAADTAAAAAwAAAAAAAADUAAAAAwAAAAAAAADVAAAAAwAAAAAAAADWAAAAAwAAAAAAAADXAAAAAwAAAAAAAADYAAAAAwAAAAAAAADZAAAAAwAAAAAAAADaAAAAAwAAAAAAAAA8AAsAAgAAAAAACAA9AAsAAgAAAAAACAA+AAsAAgAAAAAACAA/AAsAAgAAAAAACABAAAsAAgAAAAAACABBAAsAAgAAAAAACABCAAsAAgAAAAAACABDAAsAAgAAAAAACABEAAsAAgAAAAAACABFAAsAAgAAAAAACABGAAsAAgAAAAAACABHAAsAAgAAAAAACABIAAsAAgAAAAAACABJAAsAAgAAAAAACABKAAsAAgAAAAAACABLAAsAAgAAAAAACABMAAsAAgAAAAAACABNAAsAAgAAAAAACAA8AAwABgAAAAAAAAA9AAwABgAAAAAAAAA+AAwABgAAAAAAAAA/AAwABgAAAAAAAABAAAwABgAAAAAAAABBAAwABgAAAAAAAABCAAwABgAAAAAAAABDAAwABgAAAAAAAABEAAwABgAAAAAAAABFAAwABgAAAAAAAABGAAwABgAAAAAAAABHAAwABgAAAAAAAABIAAwABgAAAAAAAABJAAwABgAAAAAAAABKAAwABgAAAAAAAABLAAwABgAAAAAAAABMAAwABgAAAAAAAABNAAwABgAAAAAAAABaAAgAAwAAAAAAAABaAAkAAwAAAAAAAABaAAoAAwAAAAAAAABaAAsAAwAAAAAAAABaAAwAAwAAAAAAAABbAAgAAwAAAAAAAABbAAkAAwAAAAAAAABbAAoAAwAAAAAAAABbAAsAAwAAAAAAAABbAAwAAwAAAAAAAABcAAgAAwAAAAAAAABcAAkAAwAAAAAAAABcAAoAAwAAAAAAAABcAAsAAwAAAAAAAABcAAwAAwAAAAAAAABdAAgAAwAAAAAAAABdAAkAAwAAAAAAAABdAAoAAwAAAAAAAABdAAsAAwAAAAAAAABdAAwAAwAAAAAAAABeAAgAAwAAAAAAAABeAAkAAwAAAAAAAABeAAoAAwAAAAAAAABeAAsAAwAAAAAAAABeAAwAAwAAAAAAAABfAAgAAwAAAAAAAABfAAkAAwAAAAAAAABfAAoAAwAAAAAAAABfAAsAAwAAAAAAAABfAAwAAwAAAAAAAABgAAgAAwAAAAAAAABgAAkAAwAAAAAAAABgAAoAAwAAAAAAAABgAAsAAwAAAAAAAABgAAwAAwAAAAAAAABhAAgAAwAAAAAAAABhAAkAAwAAAAAAAABhAAoAAwAAAAAAAABhAAsAAwAAAAAAAABhAAwAAwAAAAAAAABiAAgAAwAAAAAAAABiAAkAAwAAAAAAAABiAAoAAwAAAAAAAABiAAsAAwAAAAAAAABiAAwAAwAAAAAAAABjAAgAAwAAAAAAAABjAAkAAwAAAAAAAABjAAoAAwAAAAAAAABjAAsAAwAAAAAAAABjAAwAAwAAAAAAAABkAAgAAwAAAAAAAABkAAkAAwAAAAAAAABkAAoAAwAAAAAAAABkAAsAAwAAAAAAAABkAAwAAwAAAAAAAABlAAgAAwAAAAAAAABlAAkAAwAAAAAAAABlAAoAAwAAAAAAAABlAAsAAwAAAAAAAABlAAwAAwAAAAAAAABmAAgAAwAAAAAAAABmAAkAAwAAAAAAAABmAAoAAwAAAAAAAABmAAsAAwAAAAAAAABmAAwAAwAAAAAAAABnAAgAAwAAAAAAAABnAAkAAwAAAAAAAABnAAoAAwAAAAAAAABnAAsAAwAAAAAAAABnAAwAAwAAAAAAAABoAAYAAwAAAAAAAABoAAcAAwAAAAAAAABoAAgAAwAAAAAAAABoAAkAAwAAAAAAAABoAAoAAwAAAAAAAABoAAsAAwAAAAAAAABoAAwAAwAAAAAAAABpAAYAAwAAAAAAAABpAAcAAwAAAAAAAABpAAgAAwAAAAAAAABpAAkAAwAAAAAAAABpAAoAAwAAAAAAAABpAAsAAwAAAAAAAABpAAwAAwAAAAAAAABqAAYAAwAAAAAAAABqAAcAAwAAAAAAAABqAAgAAwAAAAAAAABqAAkAAwAAAAAAAABqAAoAAwAAAAAAAABqAAsAAwAAAAAAAABqAAwAAwAAAAAAAABrAAYAAwAAAAAAAABrAAcAAwAAAAAAAABrAAgAAwAAAAAAAABrAAkAAwAAAAAAAABrAAoAAwAAAAAAAABrAAsAAwAAAAAAAABrAAwAAwAAAAAAAABsAAYAAwAAAAAAAABsAAcAAwAAAAAAAABsAAgAAwAAAAAAAABsAAkAAwAAAAAAAABsAAoAAwAAAAAAAABsAAsAAwAAAAAAAABsAAwAAwAAAAAAAABtAAYAAwAAAAAAAABtAAcAAwAAAAAAAABtAAgAAwAAAAAAAABtAAkAAwAAAAAAAABtAAoAAwAAAAAAAABtAAsAAwAAAAAAAABtAAwAAwAAAAAAAABuAAYAAwAAAAAAAABuAAcAAwAAAAAAAABuAAgAAwAAAAAAAABuAAkAAwAAAAAAAABuAAoAAwAAAAAAAABuAAsAAwAAAAAAAABuAAwAAwAAAAAAAABvAAYAAwAAAAAAAABvAAcAAwAAAAAAAABvAAgAAwAAAAAAAABvAAkAAwAAAAAAAABvAAoAAwAAAAAAAABvAAsAAwAAAAAAAABvAAwAAwAAAAAAAABwAAYAAwAAAAAAAABwAAcAAwAAAAAAAABwAAgAAwAAAAAAAABwAAkAAwAAAAAAAABwAAoAAwAAAAAAAABwAAsAAwAAAAAAAABwAAwAAwAAAAAAAABxAAYAAwAAAAAAAABxAAcAAwAAAAAAAABxAAgAAwAAAAAAAABxAAkAAwAAAAAAAABxAAoAAwAAAAAAAABxAAsAAwAAAAAAAABxAAwAAwAAAAAAAAByAAYAAwAAAAAAAAByAAcAAwAAAAAAAAByAAgAAwAAAAAAAAByAAkAAwAAAAAAAAByAAoAAwAAAAAAAAByAAsAAwAAAAAAAAByAAwAAwAAAAAAAABzAAYAAwAAAAAAAABzAAcAAwAAAAAAAABzAAgAAwAAAAAAAABzAAkAAwAAAAAAAABzAAoAAwAAAAAAAABzAAsAAwAAAAAAAABzAAwAAwAAAAAAAABmAAcAAgAAAAAABQBiAAcAAgAAAAAABQB0AAoAAwAAAAAAAAB0AAsAAwAAAAAAAAB0AAwAAwAAAAAAAAB1AAoAAwAAAAAAAAB1AAsAAwAAAAAAAAB1AAwAAwAAAAAAAAB2AAoAAwAAAAAAAAB2AAsAAwAAAAAAAAB2AAwAAwAAAAAAAAB3AAoAAwAAAAAAAAB3AAsAAwAAAAAAAAB3AAwAAwAAAAAAAAB4AAoAAwAAAAAAAAB4AAsAAwAAAAAAAAB4AAwAAwAAAAAAAAB5AAoAAwAAAAAAAAB5AAsAAwAAAAAAAAB5AAwAAwAAAAAAAAB6AAoAAwAAAAAAAAB6AAsAAwAAAAAAAAB6AAwAAwAAAAAAAAB7AAoAAwAAAAAAAAB7AAsAAwAAAAAAAAB7AAwAAwAAAAAAAAB8AAoAAwAAAAAAAAB8AAsAAwAAAAAAAAB8AAwAAwAAAAAAAAB9AAoAAwAAAAAAAAB9AAsAAwAAAAAAAAB9AAwAAwAAAAAAAAB+AAoAAwAAAAAAAAB+AAsAAwAAAAAAAAB+AAwAAwAAAAAAAAB/AAoAAwAAAAAAAAB/AAsAAwAAAAAAAAB/AAwAAwAAAAAAAACAAAoAAwAAAAAAAACAAAsAAwAAAAAAAACAAAwAAwAAAAAAAACBAAoAAwAAAAAAAACBAAsAAwAAAAAAAACBAAwAAwAAAAAAAACCAAoAAwAAAAAAAACCAAsAAwAAAAAAAACCAAwAAwAAAAAAAACDAAoAAwAAAAAAAACDAAsAAwAAAAAAAACDAAwAAwAAAAAAAACEAAoAAwAAAAAAAACEAAsAAwAAAAAAAACEAAwAAwAAAAAAAACFAAoAAwAAAAAAAACFAAsAAwAAAAAAAACFAAwAAwAAAAAAAAB5AAUAAwAAAAAAAAB6AAUAAwAAAAAAAAB7AAUAAwAAAAAAAAB8AAUAAwAAAAAAAAB9AAUAAwAAAAAAAAB+AAUAAwAAAAAAAAB/AAUAAwAAAAAAAACAAAUAAwAAAAAAAACBAAUAAwAAAAAAAACCAAUAAwAAAAAAAACGAAsAAwAAAAAAAACGAAwAAwAAAAAAAACHAAsAAwAAAAAAAACHAAwAAwAAAAAAAACIAAsAAwAAAAAAAACIAAwAAwAAAAAAAACJAAsAAwAAAAAAAACJAAwAAwAAAAAAAACKAAsAAwAAAAAAAACKAAwAAwAAAAAAAACLAAsAAwAAAAAAAACLAAwAAwAAAAAAAACMAAsAAwAAAAAAAACMAAwAAwAAAAAAAACNAAsAAwAAAAAAAACNAAwAAwAAAAAAAACOAAsAAwAAAAAAAACOAAwAAwAAAAAAAACPAAsAAwAAAAAAAACPAAwAAwAAAAAAAACQAAsAAwAAAAAAAACQAAwAAwAAAAAAAACGAAYAAwAAAAAAAACJAAYAAwAAAAAAAACRAAgAAwAAAAAAAACRAAkAAwAAAAAAAACRAAoAAwAAAAAAAACRAAsAAwAAAAAAAACRAAwAAwAAAAAAAACSAAgAAwAAAAAAAACSAAkAAwAAAAAAAACSAAoAAwAAAAAAAACSAAsAAwAAAAAAAACSAAwAAwAAAAAAAACTAAgAAwAAAAAAAACTAAkAAwAAAAAAAACTAAoAAwAAAAAAAACTAAsAAwAAAAAAAACTAAwAAwAAAAAAAACUAAgAAwAAAAAAAACUAAkAAwAAAAAAAACUAAoAAwAAAAAAAACUAAsAAwAAAAAAAACUAAwAAwAAAAAAAACVAAgAAwAAAAAAAACVAAkAAwAAAAAAAACVAAoAAwAAAAAAAACVAAsAAwAAAAAAAACVAAwAAwAAAAAAAACWAAgAAwAAAAAAAACWAAkAAwAAAAAAAACWAAoAAwAAAAAAAACWAAsAAwAAAAAAAACWAAwAAwAAAAAAAACXAAgAAwAAAAAAAACXAAkAAwAAAAAAAACXAAoAAwAAAAAAAACXAAsAAwAAAAAAAACXAAwAAwAAAAAAAACYAAgAAwAAAAAAAACYAAkAAwAAAAAAAACYAAoAAwAAAAAAAACYAAsAAwAAAAAAAACYAAwAAwAAAAAAAACZAAgAAwAAAAAAAACZAAkAAwAAAAAAAACZAAoAAwAAAAAAAACZAAsAAwAAAAAAAACZAAwAAwAAAAAAAACaAAgAAwAAAAAAAACaAAkAAwAAAAAAAACaAAoAAwAAAAAAAACaAAsAAwAAAAAAAACaAAwAAwAAAAAAAACbAAgAAwAAAAAAAACbAAkAAwAAAAAAAACbAAoAAwAAAAAAAACbAAsAAwAAAAAAAACbAAwAAwAAAAAAAACcAAgAAwAAAAAAAACcAAkAAwAAAAAAAACcAAoAAwAAAAAAAACcAAsAAwAAAAAAAACcAAwAAwAAAAAAAACdAAgAAwAAAAAAAACdAAkAAwAAAAAAAACdAAoAAwAAAAAAAACdAAsAAwAAAAAAAACdAAwAAwAAAAAAAACeAAgAAwAAAAAAAACeAAkAAwAAAAAAAACeAAoAAwAAAAAAAACeAAsAAwAAAAAAAACeAAwAAwAAAAAAAACfAAgAAwAAAAAAAACfAAkAAwAAAAAAAACfAAoAAwAAAAAAAACfAAsAAwAAAAAAAACfAAwAAwAAAAAAAACgAAgAAwAAAAAAAACgAAkAAwAAAAAAAACgAAoAAwAAAAAAAACgAAsAAwAAAAAAAACgAAwAAwAAAAAAAACRAAEAAwAAAAAAAACRAAIAAwAAAAAAAACRAAMAAwAAAAAAAACSAAEAAwAAAAAAAACSAAIAAwAAAAAAAACSAAMAAwAAAAAAAACTAAEAAwAAAAAAAACTAAIAAwAAAAAAAACTAAMAAwAAAAAAAACUAAEAAwAAAAAAAACUAAIAAwAAAAAAAACUAAMAAwAAAAAAAACVAAEAAwAAAAAAAACVAAIAAwAAAAAAAACVAAMAAwAAAAAAAACWAAEAAwAAAAAAAACWAAIAAwAAAAAAAACWAAMAAwAAAAAAAACXAAEAAwAAAAAAAACXAAIAAwAAAAAAAACXAAMAAwAAAAAAAACYAAEAAwAAAAAAAACYAAIAAwAAAAAAAACYAAMAAwAAAAAAAACZAAEAAwAAAAAAAACZAAIAAwAAAAAAAACZAAMAAwAAAAAAAACaAAEAAwAAAAAAAACaAAIAAwAAAAAAAACaAAMAAwAAAAAAAACbAAEAAwAAAAAAAACbAAIAAwAAAAAAAACbAAMAAwAAAAAAAACcAAEAAwAAAAAAAACcAAIAAwAAAAAAAACcAAMAAwAAAAAAAACdAAEAAwAAAAAAAACdAAIAAwAAAAAAAACeAAEAAwAAAAAAAACeAAIAAwAAAAAAAACfAAEAAwAAAAAAAACfAAIAAwAAAAAAAACgAAEAAwAAAAAAAACgAAIAAwAAAAAAAACNAAUAAwAAAAAAAACPAAYAAwAAAAAAAACQAAUAAwAAAAAAAACHAAcAAwAAAAAAAACIAAcAAwAAAAAAAACPAAoAAgAAAAAABQCHAAYAAgAAAAAAAgCIAAYAAgAAAAAAAgCPAAUAAgAAAAAAAgCOAAUAAgAAAAAAAgCOAAYAAwAAAAAAAAChAAoAAwAAAAAAAAChAAsAAwAAAAAAAAChAAwAAwAAAAAAAACiAAoAAwAAAAAAAACiAAsAAwAAAAAAAACiAAwAAwAAAAAAAACjAAoAAwAAAAAAAACjAAsAAwAAAAAAAACjAAwAAwAAAAAAAACkAAoAAwAAAAAAAACkAAsAAwAAAAAAAACkAAwAAwAAAAAAAAClAAoAAwAAAAAAAAClAAsAAwAAAAAAAAClAAwAAwAAAAAAAACmAAoAAwAAAAAAAACmAAsAAwAAAAAAAACmAAwAAwAAAAAAAACnAAoAAwAAAAAAAACnAAsAAwAAAAAAAACnAAwAAwAAAAAAAACoAAoAAwAAAAAAAACoAAsAAwAAAAAAAACoAAwAAwAAAAAAAACpAAoAAwAAAAAAAACpAAsAAwAAAAAAAACpAAwAAwAAAAAAAACqAAoAAwAAAAAAAACqAAsAAwAAAAAAAACqAAwAAwAAAAAAAACrAAoAAwAAAAAAAACrAAsAAwAAAAAAAACrAAwAAwAAAAAAAACsAAoAAwAAAAAAAACsAAsAAwAAAAAAAACsAAwAAwAAAAAAAACtAAoAAwAAAAAAAACtAAsAAwAAAAAAAACtAAwAAwAAAAAAAACuAAoAAwAAAAAAAACuAAsAAwAAAAAAAACuAAwAAwAAAAAAAACvAAoAAwAAAAAAAACvAAsAAwAAAAAAAACvAAwAAwAAAAAAAACwAAoAAwAAAAAAAACwAAsAAwAAAAAAAACwAAwAAwAAAAAAAACxAAoAAwAAAAAAAACxAAsAAwAAAAAAAACxAAwAAwAAAAAAAACyAAoAAwAAAAAAAACyAAsAAwAAAAAAAACyAAwAAwAAAAAAAACzAAoAAwAAAAAAAACzAAsAAwAAAAAAAACzAAwAAwAAAAAAAAC0AAoAAwAAAAAAAAC0AAsAAwAAAAAAAAC0AAwAAwAAAAAAAAC1AAoAAwAAAAAAAAC1AAsAAwAAAAAAAAC1AAwAAwAAAAAAAAC2AAoAAwAAAAAAAAC2AAsAAwAAAAAAAAC2AAwAAwAAAAAAAAChAAEAAwAAAAAAAAChAAIAAwAAAAAAAACiAAEAAwAAAAAAAACiAAIAAwAAAAAAAACjAAEAAwAAAAAAAACjAAIAAwAAAAAAAACkAAEAAwAAAAAAAACkAAIAAwAAAAAAAAClAAEAAwAAAAAAAAClAAIAAwAAAAAAAACmAAEAAwAAAAAAAACmAAIAAwAAAAAAAACnAAEAAwAAAAAAAACnAAIAAwAAAAAAAACoAAEAAwAAAAAAAACoAAIAAwAAAAAAAACpAAEAAwAAAAAAAACpAAIAAwAAAAAAAACqAAEAAwAAAAAAAACqAAIAAwAAAAAAAACrAAEAAwAAAAAAAACrAAIAAwAAAAAAAACsAAEAAwAAAAAAAACsAAIAAwAAAAAAAACtAAEAAwAAAAAAAACtAAIAAwAAAAAAAACuAAEAAwAAAAAAAACuAAIAAwAAAAAAAACvAAEAAwAAAAAAAACvAAIAAwAAAAAAAACwAAEAAwAAAAAAAACwAAIAAwAAAAAAAACxAAEAAwAAAAAAAACxAAIAAwAAAAAAAACyAAEAAwAAAAAAAACyAAIAAwAAAAAAAACzAAEAAwAAAAAAAACzAAIAAwAAAAAAAAC0AAEAAwAAAAAAAAC0AAIAAwAAAAAAAAC1AAEAAwAAAAAAAAC1AAIAAwAAAAAAAAC2AAEAAwAAAAAAAAC2AAIAAwAAAAAAAACdAAcAAwAAAAAAAACeAAcAAwAAAAAAAACfAAcAAwAAAAAAAACgAAcAAwAAAAAAAACgAAYAAwAAAAAAAACfAAYAAwAAAAAAAACeAAYAAwAAAAAAAACfAAUAAwAAAAAAAACgAAUAAwAAAAAAAACgAAQAAwAAAAAAAACvAAkAAgAAAAAAAgCuAAkAAgAAAAAAAgC2AAkAAgAAAAAAAgC3AAkAAgAAAAAAAgC3AAoAAwAAAAAAAAC3AAsAAwAAAAAAAAC3AAwAAwAAAAAAAAC4AAoAAwAAAAAAAAC4AAsAAwAAAAAAAAC4AAwAAwAAAAAAAAC5AAoAAwAAAAAAAAC5AAsAAwAAAAAAAAC5AAwAAwAAAAAAAAC6AAoAAwAAAAAAAAC6AAsAAwAAAAAAAAC6AAwAAwAAAAAAAAC7AAoAAwAAAAAAAAC7AAsAAwAAAAAAAAC7AAwAAwAAAAAAAAC8AAoAAwAAAAAAAAC8AAsAAwAAAAAAAAC8AAwAAwAAAAAAAAC9AAoAAwAAAAAAAAC9AAsAAwAAAAAAAAC9AAwAAwAAAAAAAAC+AAoAAwAAAAAAAAC+AAsAAwAAAAAAAAC+AAwAAwAAAAAAAAC/AAoAAwAAAAAAAAC/AAsAAwAAAAAAAAC/AAwAAwAAAAAAAADAAAoAAwAAAAAAAADAAAsAAwAAAAAAAADAAAwAAwAAAAAAAADBAAoAAwAAAAAAAADBAAsAAwAAAAAAAADBAAwAAwAAAAAAAADCAAoAAwAAAAAAAADCAAsAAwAAAAAAAADCAAwAAwAAAAAAAADDAAoAAwAAAAAAAADDAAsAAwAAAAAAAADDAAwAAwAAAAAAAADEAAoAAwAAAAAAAADEAAsAAwAAAAAAAADEAAwAAwAAAAAAAADFAAoAAwAAAAAAAADFAAsAAwAAAAAAAADFAAwAAwAAAAAAAADGAAoAAwAAAAAAAADGAAsAAwAAAAAAAADGAAwAAwAAAAAAAADHAAoAAwAAAAAAAADHAAsAAwAAAAAAAADHAAwAAwAAAAAAAADIAAoAAwAAAAAAAADIAAsAAwAAAAAAAADIAAwAAwAAAAAAAADJAAoAAwAAAAAAAADJAAsAAwAAAAAAAADJAAwAAwAAAAAAAADKAAoAAwAAAAAAAADKAAsAAwAAAAAAAADKAAwAAwAAAAAAAADLAAoAAwAAAAAAAADLAAsAAwAAAAAAAADLAAwAAwAAAAAAAADMAAoAAwAAAAAAAADMAAsAAwAAAAAAAADMAAwAAwAAAAAAAADNAAoAAwAAAAAAAADNAAsAAwAAAAAAAADNAAwAAwAAAAAAAADOAAoAAwAAAAAAAADOAAsAAwAAAAAAAADOAAwAAwAAAAAAAADPAAoAAwAAAAAAAADPAAsAAwAAAAAAAADPAAwAAwAAAAAAAADQAAoAAwAAAAAAAADQAAsAAwAAAAAAAADQAAwAAwAAAAAAAADRAAoAAwAAAAAAAADRAAsAAwAAAAAAAADRAAwAAwAAAAAAAADSAAoAAwAAAAAAAADSAAsAAwAAAAAAAADSAAwAAwAAAAAAAADTAAoAAwAAAAAAAADTAAsAAwAAAAAAAADTAAwAAwAAAAAAAADUAAoAAwAAAAAAAADUAAsAAwAAAAAAAADUAAwAAwAAAAAAAADVAAoAAwAAAAAAAADVAAsAAwAAAAAAAADVAAwAAwAAAAAAAADWAAoAAwAAAAAAAADWAAsAAwAAAAAAAADWAAwAAwAAAAAAAADXAAoAAwAAAAAAAADXAAsAAwAAAAAAAADXAAwAAwAAAAAAAADYAAoAAwAAAAAAAADYAAsAAwAAAAAAAADYAAwAAwAAAAAAAADZAAoAAwAAAAAAAADZAAsAAwAAAAAAAADZAAwAAwAAAAAAAADaAAoAAwAAAAAAAADaAAsAAwAAAAAAAADaAAwAAwAAAAAAAAD//wEAAwAAAAAAAAD//wIAAwAAAAAAAAD//wMAAwAAAAAAAAD//wQAAwAAAAAAAAD//wUAAwAAAAAAAAD//wYAAwAAAAAAAAD//wcAAwAAAAAAAAD//wgAAwAAAAAAAAD//wkAAwAAAAAAAACAAAkAAgAAAAAAAgCBAAkAAgAAAAAAAgB6AAkAAgAAAAAAAgB7AAkAAgAAAAAAAgBYAAUAAgAAAAAABQA=")
tile_set = ExtResource("3_seiur")

[node name="CharacterBody2D" parent="." instance=ExtResource("4_0kkl0")]
position = Vector2(16, 144)

[node name="levelmusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_gxsq4")
autoplay = true

[node name="Circles" type="Node" parent="."]

[node name="Sprite2D" parent="." instance=ExtResource("6_isn4r")]
position = Vector2(3000, 144)
scene = "res://scenes_and_scripts/levels/world2/level1.tscn"

[node name="CircleUI" parent="." instance=ExtResource("7_40e2s")]

[node name="Bubble" parent="." instance=ExtResource("7_gxsq4")]
position = Vector2(2864, 144)

[node name="MusicChange" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MusicChange"]
position = Vector2(2584, 56)
shape = SubResource("RectangleShape2D_gxsq4")

[node name="InstantDeath" parent="." instance=ExtResource("8_jdk3m")]
position = Vector2(1856, 232)
scale = Vector2(231.823, 1)

[connection signal="body_entered" from="MusicChange" to="." method="_on_music_change_body_entered"]
